# moodle-mcp

./: .env.example  .gitignore  LICENSE  README.md  get_token.py  pyproject.toml  server.py
.github/workflows/: release.yml
src/moodle_mcp/: get_token.py  server.py
tests/: test_quiz_tools.py
