[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-moodle"
version = "0.1.0"
description = "MCP server exposing Moodle Web Services to AI assistants (Claude, Cursor, etc.)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Arthur Lefebvre", email = "arthurloup.lefebvre@gmail.com" }]
keywords = ["mcp", "moodle", "claude", "ai", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Education",
]
dependencies = [
  "mcp[cli]>=1.2.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
token = ["playwright>=1.40"]

[project.scripts]
mcp-moodle = "moodle_mcp.server:main"
mcp-moodle-token = "moodle_mcp.get_token:main"

[project.urls]
Homepage = "https://github.com/Snaw80/moodle-mcp"
Repository = "https://github.com/Snaw80/moodle-mcp"
Issues = "https://github.com/Snaw80/moodle-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/moodle_mcp"]
